--- a/alice/client/src/index.css
+++ b/alice/client/src/index.css
@@ -30,6 +30,14 @@ body {
   min-height: 100vh;
 }
 
+#root {
+  width: 100%;
+  height: 100%;
+  display: flex; /* Make #root a flex container */
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+}
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
